<resources>

    <string name="app_name">OTAMS</string>
    <string name="profile_pic">Profile pic</string>
    <string name="username">Username:</string>
    <string name="password">Password:</string>
    <string name="login">Login</string>
    <string name="register_as_tutor">Register as Tutor</string>
    <string name="register_as_student">Register as Student</string>
    <string name="tutor_registration_form">Tutor Registration Form</string>
    <string name="student_registration_form">Student Registration Form</string>

    <string name="first_name">First Name:</string>
    <string name="last_name">Last Name:</string>
    <string name="email_address">Email address (username):</string>
    <string name="account_password">Account Password:</string>
    <string name="phone_number">Phone number:</string>
    <string name="highest_degree">Highest degree:</string>
    <string name="courses_offered">Courses offered (one or more):</string>
    <string name="program_of_study">Program of study:</string>

    <string name="welcome">Welcome!</string>
    <string name="logged_in_as">You are logged in as</string>
    <string name="role">[role]</string>
    <string name="log_off">Log Off</string>
    <string name="right_arrow">⮕</string>
    <string name="pending_requests">Pending Requests</string>
    <string name="rejected_requests">Rejected Requests</string>

    <string name="logged_in_admin">Administrator</string>
    <string name="dashboard_button">Dashboard</string>

    <string name="registration_rejected_status">Status: registration approval REJECTED</string>
    <string name="registration_rejected">The administrator has rejected your registration request</string>
    <string name="registration_rejected_contact">Contact the administrator if you wish to resolve the matter</string>
    <string name="registration_number">Contact number: 012–345–6789</string>

    <string name="registration_pending_status">Status: registration approval PENDING</string>
    <string name="registration_pending">The administrator has not yet processed your registration request</string>
    <string name="registration_pending_update">Check the status of your request later once the administrator has processed the request</string>
    <string name="administrator_dashboard">Administrator Dashboard</string>
    <string name="registration_request_details">Registration Request Details</string>


    <string name="tutor_dashboard_button">Dashboard</string>
    <string name="tutor_log_off">Log Off</string>


    <string name="logged_in_tutor">Tutor</string>
    <string name="tutor_dashboard">Tutor Dashboard</string>
    <string name="open_timeslots">Open Timeslots</string>
    <string name="pending_sessions">Pending Sessions</string>
    <!-- <string name="all_sessions">All Sessions</string> -->
    <!-- <string name="pending_session_requests">Pending Session Requests</string> -->
    <string name="upcoming_sessions">Upcoming Sessions</string>
    <string name="past_sessions">Past Sessions</string>
    <string name="manage_availability">Manage Availability</string>
    <string name="create_edit_slots">Create/Edit Slots</string>
    <string name="slots">Slots</string>
    <string name="select_time_range">Select Time Range</string>
    <string name="back_to_dashboard">Back to Dashboard</string>
    <string name="add_availability">Add Availability</string>

    <string name="student_information"> Student Information</string>
    <string name="open_timeslot_page_title"> Open Timeslot</string>
    <string name="pending_session_page_title"> Request from Student</string>
    <string name="upcoming_session_page_title"> Upcoming Session with Student</string>
    <string name="past_session_page_title"> Past Session with Student</string>

    <string name="tutor_approval_automate">Automate Approval</string>
    <string name="availability_slots">Availability Slots</string>

    <string name="student_pending_sessions">Pending Sessions</string>
    <string name="student_dashboard">Student Dashboard</string>
    <string name="rejected_sessions">Rejected Sessions</string>
    <string name="student_upcoming_sessions">Upcoming Sessions</string>
    <string name="student_past_sessions">Past Sessions</string>
    <string name="manage_sessions">Manage Sessions</string>

    <string name="logged_in_student">Student</string>
    <string name="search_button">Search by Course</string>
    <string name="back_to_welcome_page">Back to Welcome Page</string>
    <string name="tutor_name">Tutor Name:</string>
    <string name="course">Course:</string>
    <string name="date_amp_time"><![CDATA[Date & Time:]]></string>
    <string name="submit_rating">Submit Rating</string>
    <string name="rate_your_tutor">Rate Your Tutor</string>
    <string name="u2b05">⬅</string>

    <string name="course_search_title">Search Tutors by Course</string>
    <string name="course_search_bar">Search by course code (SEG2105)</string>
    <string name="course_search_results_title">Available tutors for _______</string>

    <string name="course_search_results_book">Book</string>
    <string name="upcoming_sessions_with_tutor">Upcoming Sessions With Tutor</string>
    <string name="past_session_with_tutor">Past Session With Tutor</string>
    <string name="rate_tutor">Rate Tutor</string>
    <string name="pending_session_with_tutor">Pending Session With Tutor</string>
    <string name="rejected_session_with_tutor">Rejected Session With Tutor</string>
    <string name="upcoming_session_with_student">Upcoming Session With Student</string>


</resources>