<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/back_button"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/default_background"
    android:orientation="vertical"
    android:padding="24dp"
    tools:context=".WelcomeTutorPageActivity">

    <TextView
        android:id="@+id/welcomeTitleText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/welcome"
        android:textSize="30sp"
        android:textStyle="bold"
        android:textColor="@color/white"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="26dp"
        android:paddingBottom="16dp"
        android:paddingTop="16dp"
        android:gravity="center"/>

    <TextView
        android:id="@+id/welcomeText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/logged_in_as"
        android:textSize="30sp"
        android:textStyle="bold"
        android:textColor="@color/white"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="130dp"
        android:paddingBottom="16dp"
        android:paddingTop="16dp"
        android:gravity="center"/>

    <TextView
        android:id="@+id/welcome_tutor_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/logged_in_student"
        android:textSize="30sp"
        android:textStyle="bold"
        android:textColor="@color/indigo"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="26dp"
        android:paddingBottom="16dp"
        android:paddingTop="16dp"
        android:gravity="center"/>

    <Button
        android:id="@+id/button_search"
        android:layout_width="400dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_gravity="center_horizontal"
        android:padding="10dp"
        android:text="@string/search_button"
        android:textSize="20sp"
        android:textStyle="bold"
        android:onClick="onClickDashboard"/>

    <Button
        android:id="@+id/button_dashboard"
        android:layout_width="400dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_gravity="center_horizontal"
        android:padding="10dp"
        android:text="@string/dashboard_button"
        android:textSize="20sp"
        android:textStyle="bold"
        android:onClick="onClickDashboard"/>

    <Button
        android:id="@+id/button_log_off"
        android:layout_width="400dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_gravity="center_horizontal"
        android:padding="10dp"
        android:text="@string/log_off"
        android:textSize="20sp"
        android:textStyle="bold"
        android:onClick="onClickLogOff"/>

</LinearLayout>

