<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/default_background"
    android:orientation="vertical"
    android:padding="24dp"
    tools:context=".TutorRegistrationActivity">

    <TextView
        android:id="@+id/tutorTitleText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tutor_registration_form"
        android:textSize="30sp"
        android:textStyle="bold"
        android:textColor="@color/white"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="26dp"
        android:paddingBottom="16dp"
        android:paddingTop="16dp"
        android:paddingLeft="12dp"
        android:paddingRight="12dp"
        android:gravity="center"/>

    <EditText
        android:id="@+id/tutor_first_name"
        android:layout_width="360dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:minHeight="48dp"
        android:layout_marginTop="30dp"
        android:hint="@string/first_name"
        android:inputType="textPersonName"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        tools:ignore="Autofill" />
    <EditText
        android:id="@+id/tutor_last_name"
        android:layout_width="360dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:minHeight="48dp"
        android:layout_marginTop="10dp"
        android:hint="@string/last_name"
        android:inputType="textPersonName"
        android:textColor="@color/white"
        android:textColorHint="@color/white" />

    <EditText
        android:id="@+id/tutor_email_address"
        android:layout_width="360dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:minHeight="48dp"
        android:layout_marginTop="10dp"
        android:hint="@string/email_address"
        android:inputType="textEmailAddress"
        android:textColor="@color/white"
        android:textColorHint="@color/white" />
    <EditText
        android:id="@+id/tutor_account_password"
        android:layout_width="360dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:minHeight="48dp"
        android:layout_marginTop="10dp"
        android:hint="@string/account_password"
        android:inputType="textPassword"
        android:textColor="@color/white"
        android:textColorHint="@color/white" />
    <EditText
        android:id="@+id/tutor_phone_number"
        android:layout_width="360dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:minHeight="48dp"
        android:layout_marginTop="10dp"
        android:hint="@string/phone_number"
        android:inputType="phone"
        android:textColor="@color/white"
        android:textColorHint="@color/white" />
    <EditText
        android:id="@+id/tutor_highest_degree"
        android:layout_width="360dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:minHeight="48dp"
        android:layout_marginTop="10dp"
        android:hint="@string/highest_degree"
        android:inputType="text"
        android:textColor="@color/white"
        android:textColorHint="@color/white" />
    <EditText
        android:id="@+id/tutor_courses_offered"
        android:layout_width="360dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:minHeight="48dp"
        android:layout_marginTop="10dp"
        android:hint="@string/courses_offered"
        android:inputType="textMultiLine|textCapWords"
        android:lines="3"
        android:gravity="top|start"
        android:imeOptions="actionDone"
        android:textColor="@color/white"
        android:textColorHint="@color/white" />

    <Button
        android:id="@+id/button"
        android:layout_width="400dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_gravity="center_horizontal"
        android:padding="10dp"
        android:text="Register"
        android:textSize="20sp"
        android:textStyle="bold"
        android:onClick="onClickTutorRegistrationButton"/>


</LinearLayout>

