<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/back_button"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/default_background"
    android:orientation="vertical"
    android:padding="24dp"
    tools:context=".StudentRegistrationActivity">

    <TextView
        android:id="@+id/studentTitleText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/student_registration_form"
        android:textSize="30sp"
        android:textStyle="bold"
        android:textColor="@color/white"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="26dp"
        android:paddingBottom="16dp"
        android:paddingTop="16dp"
        android:paddingLeft="12dp"
        android:paddingRight="12dp"
        android:gravity="center"/>

    <EditText
        android:id="@+id/student_first_name"
        android:layout_width="360dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="30dp"
        android:hint="@string/first_name"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        android:textColor="@color/white"
        android:textColorHint="@color/white" />

    <EditText
        android:id="@+id/student_last_name"
        android:layout_width="360dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:minHeight="48dp"
        android:layout_marginTop="10dp"
        android:hint="@string/last_name"
        android:inputType="textPersonName"
        android:textColor="@color/white"
        android:textColorHint="@color/white" />

    <EditText
        android:id="@+id/student_email_address"
        android:layout_width="360dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:minHeight="48dp"
        android:layout_marginTop="10dp"
        android:hint="@string/email_address"
        android:inputType="textEmailAddress"
        android:textColor="@color/white"
        android:textColorHint="@color/white" />
    <EditText
        android:id="@+id/student_account_password"
        android:layout_width="360dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:minHeight="48dp"
        android:layout_marginTop="10dp"
        android:hint="@string/account_password"
        android:inputType="textPassword"
        android:textColor="@color/white"
        android:textColorHint="@color/white" />
    <EditText
        android:id="@+id/student_phone_number"
        android:layout_width="360dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:minHeight="48dp"
        android:layout_marginTop="10dp"
        android:hint="@string/phone_number"
        android:inputType="phone"
        android:textColor="@color/white"
        android:textColorHint="@color/white" />
    <EditText
        android:id="@+id/student_program_of_study"
        android:layout_width="360dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:minHeight="48dp"
        android:layout_marginTop="10dp"
        android:hint="@string/program_of_study"
        android:inputType="text"
        android:textColor="@color/white"
        android:textColorHint="@color/white" />

    <Button
        android:id="@+id/button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:layout_gravity="center_horizontal"
        android:padding="10dp"
        android:textSize="20sp"
        android:textStyle="bold"
        android:text="Register"
        android:onClick="onClickStudentRegistrationButton"/>

    <Button
        android:id="@+id/student_back_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Back"
        android:textSize="20sp"
        android:onClick="onClickStudentBackButton"/>


</LinearLayout>

